# Medicine-chat-AI

./: .bumpversion.cfg  .env_example  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  kuberctl.yaml  pyproject.toml  requirements.txt  template.py
.github/workflows/: ci-cd.yml
data/: medicines_output_medicines_en.xlsx
database/: config.yml
models/: config.yml
research/: research.ipynb
src/components/: agents.py  database.py  main_script.py  models.py
src/entity/: entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: flow_pipeline.py
src/prompts/: prompts.py
